--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,1 +1,14 @@
+name: Thomas Pipeline
+
+on:
+  workflow_dispatch:
+
+permissions:
+  id-token: write
+  contents: read
+env:
+   AZURE_WEBAPP_NAME: app1356
+   AZURE_WEBAPP_PACKAGE_PATH: BlazorApp1
+   DOTNET_VERSION: 6.0
+   
 
