--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -10,5 +10,41 @@ env:
    AZURE_WEBAPP_NAME: app1356
    AZURE_WEBAPP_PACKAGE_PATH: BlazorApp1
    DOTNET_VERSION: 6.0
+
+jobs:
+   Build:
+     name:  Build the App
+     runs-on: ubuntu-latest
+     steps:
+      - name: Azure Login
+        uses: Azure/login@v1
+        with:
+             client-id:  ${{secrets.AZURE_CLIENT_ID}}
+             tenant-id:  ${{secrets.AZURE_TENANT_ID}}
+             subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+             enable-AzPSSession: true
    
 
+      # Checkout the repo
+      - uses: actions/checkout@Master
+      
+      # Setup .NET Core SDK
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }} 
+      
+      # Run dotnet build and publish
+      - name: dotnet build and publish
+        run: |
+          dotnet restore
+          dotnet build --configuration Release
+          dotnet publish -c Release --property:PublishDir='${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' 
+          
+      # Deploy to Azure Web apps
+      - name: 'Run Azure webapp deploy action using publish profile credentials'
+        uses: azure/webapps-deploy@v2
+        with: 
+          app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
+        #  publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }} # Define secret variable in repository settings as per action documentation
+          package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
