--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -26,7 +26,7 @@ jobs:
    
 
       # Checkout the repo
-      - uses: actions/checkout@Master
+      - uses: actions/checkout@main
       
       # Setup .NET Core SDK
       - name: Setup .NET Core
