--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -9,7 +9,7 @@ permissions:
 env:
    AZURE_WEBAPP_NAME: app1356
    AZURE_WEBAPP_PACKAGE_PATH: BlazorApp1
-   DOTNET_VERSION: 6.0.0
+   DOTNET_VERSION: 6.0.x
 
 jobs:
    Build:
