--- a/.github/workflows/acr.yml
+++ b/.github/workflows/acr.yml
@@ -1,1 +1,31 @@
+name: Container Pipeline
 
+on:
+  workflow_dispatch:
+
+permissions:
+  id-token: write
+  contents: read
+env:
+   AZURE_WEBAPP_NAME: app1356
+   AZURE_WEBAPP_PACKAGE_PATH: .
+   DOTNET_VERSION: 6.0.x
+
+jobs:
+   Build:
+     runs-on: ubuntu-latest
+     steps:
+      - name: Azure Login
+        uses: Azure/login@v1
+        with:
+             client-id:  ${{secrets.AZURE_CLIENT_ID}}
+             tenant-id:  ${{secrets.AZURE_TENANT_ID}}
+             subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+             enable-AzPSSession: true
+      - uses: actions/checkout@v2
+    
+      - run: |
+          docker build . -t acr1356.azurecr.io/myapp:${{ github.sha }}
+          docker push acer.azurecr.io/myapp:${{ github.sha }}   
+      
+     
