--- a/.github/workflows/acr.yml
+++ b/.github/workflows/acr.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v2
     
       - run: |
-          docker build . -t acr1356.azurecr.io/myapp:${{ github.sha }}
+          docker build ./BlazorApp1 -t acr1356.azurecr.io/myapp:${{ github.sha }}
           docker push acer.azurecr.io/myapp:${{ github.sha }}   
       
      
