--- a/.github/workflows/acr.yml
+++ b/.github/workflows/acr.yml
@@ -15,14 +15,13 @@ jobs:
    Build:
      runs-on: ubuntu-latest
      steps:
-      - name: Azure Login
-        uses: Azure/login@v1
-        with:
-             client-id:  ${{secrets.AZURE_CLIENT_ID}}
-             tenant-id:  ${{secrets.AZURE_TENANT_ID}}
-             subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
-             enable-AzPSSession: true
       - uses: actions/checkout@v2
+      - name: ACR login
+        uses: azure/docker-login@v1
+        with:
+          login-server: acr1356.azurecr.io
+          username: acr1356
+          password: 3NGS6Zt4ZNHIpD/N7xHoZGkh/Au6KCbbaTwQf8dTvL+ACRBDNk6z
     
       - run: |
           docker build ./BlazorApp1 -t acr1356.azurecr.io/myapp:v1
