--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,28 @@
+name: Tests
 
+on:
+  workflow_dispatch:
 
-- name: Azure PowerShell Action
-  uses: Azure/powershell@v1
-  with:
+permissions:
+  id-token: write
+  contents: read
+env:
+   AZURE_WEBAPP_NAME: app1356
+   AZURE_WEBAPP_PACKAGE_PATH: .
+   DOTNET_VERSION: 6.0.x
+
+jobs:
+  Tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Azure PowerShell Action
+        uses: Azure/powershell@v1
+        with:
     # Specify the Az PowerShell script here.
-    inlineScript: 
+         inlineScript: |
+           get-process
+           write-hosts " hello Thomas"
     # Azure PS version to be used to execute the script, example: 1.8.0, 2.8.0, 3.4.0. To use the latest version, specify "latest".
-    azPSVersion: 
+         azPSVersion: 7.3.0
     # Select the value of the ErrorActionPreference variable for executing the script. Options: stop, continue, silentlyContinue. Default is Stop.
-    errorActionPreference: # optional, default is Stop
-    # If this is true, this task will fail if any errors are written to the error pipeline, or if any data is written to the Standard Error stream.
-    failOnStandardError: # optional, default is false
-    # Used to pull Az module from Azure/az-ps-module-versions.  Since there's a default, this is typically not supplied by the user.
-    githubToken: # optional, default is ${{ github.token }}
+    
