--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,14 +15,11 @@ jobs:
   Tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Azure PowerShell Action
-        uses: Azure/powershell@v1
+      - name: Azure CLI Action
+        uses: Azure/cli@v1.0.8
         with:
-    # Specify the Az PowerShell script here.
+    # Specify the script here
          inlineScript: |
-           get-process
-           write-host " hello Thomas"
-    # Azure PS version to be used to execute the script, example: 1.8.0, 2.8.0, 3.4.0. To use the latest version, specify "latest".
-         azPSVersion: 7.3.0
-    # Select the value of the ErrorActionPreference variable for executing the script. Options: stop, continue, silentlyContinue. Default is Stop.
-    
+           $x= " I am kkkkk"
+           az $x
+   
