--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,11 +15,16 @@ jobs:
   Tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Azure CLI Action
-        uses: Azure/cli@v1.0.8
+      - name: Azure Login
+        uses: Azure/login@v1
         with:
-    # Specify the script here
-         inlineScript: |
-           $x= " I am kkkkk"
-           az $x
-   
+             client-id:  "1b648961-aabc-49fb-96be-5436e0038d7c"
+             tenant-id:  "58bade9d-b753-4cdd-bea4-6183f95a1ce5"
+             subscription-id: "02cd8bbf-2d3c-4eed-9c95-cf75af7acd37"
+             enable-AzPSSession: true
+
+      - name: HashiCorp - Setup Terraform
+  # You may pin to the exact commit or the version.
+  # uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1
+        uses: hashicorp/setup-terraform@v2.0.3
+  
