--- a/.github/workflows/sql.yml
+++ b/.github/workflows/sql.yml
@@ -1,1 +1,22 @@
+name: Container Pipeline
+
+on:
+  workflow_dispatch:
+
+jobs:
+   sql:
+     runs-on: [self-hosted, windows]
+     services:
+       sql:
+         image: mcr.microsoft.com/mssql/server:2022-latest  
+         ports: 
+           - 1440:1440
+
+       redis:
+         image: redis
+         ports:
+           - 6379:6379
+         
+           
+    
 
