--- a/.github/workflows/sql.yml
+++ b/.github/workflows/sql.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
    sql:
-     runs-on: [self-hosted, Windows]
+     runs-on: [self-hosted]
      services:
        sql:
          image: mcr.microsoft.com/mssql/server:2022-latest  
