--- a/.github/workflows/sql.yml
+++ b/.github/workflows/sql.yml
@@ -16,6 +16,11 @@ jobs:
          image: redis
          ports:
            - 6379:6379
+
+     steps:
+       - name: shell
+         shell: pwsh
+         run: get-process
          
            
     
