--- a/.github/workflows/sql.yml
+++ b/.github/workflows/sql.yml
@@ -5,12 +5,12 @@ on:
 
 jobs:
    sql:
-     runs-on: [self-hosted, Windows]
+     runs-on: [self-hosted, Linux]
      services:
-      # sql1:
-       #  image: mcr.microsoft.com/mssql/server:2022-latest  
-        # ports: 
-         #  - 1440:1440
+       sql1:
+         image: mcr.microsoft.com/mssql/server:2022-latest  
+         ports: 
+           - 1440:1440
 
        redis:
          image: redis
