--- a/BlazorApp1/Dockerfile
+++ b/BlazorApp1/Dockerfile
@@ -19,4 +19,5 @@ RUN dotnet publish "BlazorApp1.csproj" -c Release -o /app/publish /p:UseAppHost=
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_URLS=http://+:80
 ENTRYPOINT ["dotnet", "BlazorApp1.dll"]
