--- a/BlazorApp1/Dockerfile
+++ b/BlazorApp1/Dockerfile
@@ -20,4 +20,5 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENV ASPNETCORE_URLS=http://+:80
+ENV ASPNETCORE_URLS=http://+:82
 ENTRYPOINT ["dotnet", "BlazorApp1.dll"]
