--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
    Build:
-     runs-on: [self-hosted,Linux]
+     runs-on: ubuntu-latest
      steps:
       - uses: actions/checkout@v2
    
