--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -6,6 +6,9 @@ on:
 permissions:
   id-token: write
   contents: write
+env:
+   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 jobs:
    Build:
