--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -37,5 +37,5 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"Forat1356_Repo" /o:"forat1356" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          
+          docker build ./BlazorApp1 -t acr1356.azurecr.io/myapp:v2
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
