--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -10,7 +10,7 @@ jobs:
       - shell: pwsh
         run: |
           $user="tzebar@thomaszebargmail.onmicrosoft.com"
-          $pwd= ${{secrets.mypassword}}
+          $pwd= "${{secrets.mypassword}}"
           $pword = convertto-securestring -string $pwd -Asplaintext -force
           $credential = New-object -typename system.management.automation.pscredential -argumentlist $user, $pword
           login-azaccount -credential  $credential
