--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -7,16 +7,10 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - shell: pwsh
-        run: |
-          $user="tzebar@thomaszebargmail.onmicrosoft.com"
-          $pwd= "${{secrets.mypassword}}"
-          $pword = convertto-securestring -string $pwd -Asplaintext -force
-          $credential = New-object -typename system.management.automation.pscredential -argumentlist $user, $pword
-          install-module AZ -force
-          login-azaccount -credential  $credential
-          set-azcontext -subscription subscription1
-          get-azresourcegroup
-          
+      - name: Azure Login
+        uses: Azure/login@v1.4.6
+        with:
+           creds: ${{secrets.AZURE_CREDENTIALS}}
+    
           
     
