--- a/.github/workflows/acr.yml
+++ b/.github/workflows/acr.yml
@@ -20,25 +20,10 @@ jobs:
         uses: azure/docker-login@v1
         with:
           login-server: acr1356.azurecr.io
-          username: acr1356
-          password: 3NGS6Zt4ZNHIpD/N7xHoZGkh/Au6KCbbaTwQf8dTvL+ACRBDNk6z
+          username: "70b9df21-12ec-4d0e-93f9-52a64180733f"
+          password: "F_h8Q~a0glnso7GSILReEdbkwm0uCNgH_MP1rdaK"
     
       - run: |
           docker build ./BlazorApp1 -t acr1356.azurecr.io/myapp:v2
           docker push acr1356.azurecr.io/myapp:v2  
 
-      - name: Login to Azure
-        uses: Azure/login@v1
-        with:
-             client-id:  "1b648961-aabc-49fb-96be-5436e0038d7c"
-             tenant-id:  "58bade9d-b753-4cdd-bea4-6183f95a1ce5"
-             subscription-id: "02cd8bbf-2d3c-4eed-9c95-cf75af7acd37"
-             enable-AzPSSession: true
-
-      - name: Deploy to App service
-        uses: azure/webapps-deploy@v2
-        with:
-            app-name: 'app1356'
-       #     publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-            images: 'acr1356.azurecr.io/myapp:v2'       
-     
