--- a/.github/workflows/aks.yaml
+++ b/.github/workflows/aks.yaml
@@ -1,1 +1,25 @@
+name: Aks Pipeline
 
+on:
+  workflow_dispatch:
+
+permissions:
+  id-token: write
+  contents: read
+env:
+   AZURE_WEBAPP_NAME: app1356
+   AZURE_WEBAPP_PACKAGE_PATH: .
+   DOTNET_VERSION: 6.0.x
+
+jobs:
+   Build:
+     runs-on: ubuntu-latest
+     steps:
+       -  name: step1 
+          run: |
+            echo $AZURE_WEBAPP_NAME
+            AZURE_WEBAPP_NAME="thomas"
+            echo $AZURE_WEBAPP_NAME
+       -  name: steps2 
+          run: |
+             echo $AZURE_WEBAPP_NAME
