--- a/.github/workflows/aks.yaml
+++ b/.github/workflows/aks.yaml
@@ -29,6 +29,7 @@ jobs:
        -  name: step2
           env:
             hello: "HHHHHHHH"
+          run: echo $hello
        -  name: steps23 
           run: |
              echo $AZURE_WEBAPP_NAME
